# ros_rigor

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  Dockerfile.2  LIVING_DOC.md  MASTERS.md  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-WORKSPACE  bazel-bin  bazel-out  bazel-ros_rigor  bazel-testlogs  docker-compose.yaml  frames_2025-02-19_15.05.25.gv  start.sh
.github/workflows/: nextjs.yml
components/fastapi_example/: BUILD.bazel  main.py  pyproject.toml  requirements.txt
components/logger/backend/: Dockerfile  docker_layer.py  local.py  pyproject.toml
components/logger/backend/app/: server.py
components/logger/backend/app/routers/: docker_layer.py
components/publisher/: BUILD.bazel  Dockerfile  py_talker.py  pyproject.toml
graphs/: GameTheory.ipynb  pyproject.toml
local_env/: Dockerfile  docker-compose.yaml
local_env/Robots/hermes_robot/: CMakeLists.txt  package.xml
local_env/Robots/hermes_robot/config/: topic_mapping.yaml
local_env/Robots/hermes_robot/launch/: display.launch  empty_world.launch.py  gazebo.launch  gazebo.launch.py
local_env/Robots/hermes_robot/meshes/: Drive1.STL  Drive2.STL  Drive3.STL  Drive4.STL  Revolve1.STL  Revolve2.STL  Revolve3.STL  Revolve4.STL
local_env/Robots/hermes_robot/urdf/: Assem1.SLDASM.csv  hermes_robot.urdf  hermes_robot_2.urdf
repositories/: repositories.bzl
src/: Makefile  frames_2025-04-07_20.06.31.gv  setup_env.sh
src/dynamics/: pyproject.toml  testing.ipynb
src/gazebo_swerve_plugin/: CMakeLists.txt  SwerveActor.cc  SwerveActor.hh  SwerveDrivePlugin.cc  SwerveDrivePlugin.hh  example.sdf
src/hermes_robot/: package.xml  setup.cfg  setup.py
src/hermes_robot_cpp/: CMakeLists.txt  package.xml
src/hermes_robot_cpp/include/hermes_robot_cpp/: module_kinematics.hpp  pid_controller.hpp
src/hermes_robot_cpp/launch/: controller.launch.py  minimal_cpp.launch.py  single_module.launch.py
src/hermes_robot_cpp/src/: hermes_robot_cpp.cpp  swerve_module.cpp
src/hermes_robot_description/: CMakeLists.txt  README.md  package.xml
src/hermes_robot_description/config/: config.rviz  config2.rviz  config3.rviz  config4_w_image.rviz  config5_depth.rviz  joint_names_hermes_robot.yaml  nav2_params.yaml  slam_params.yaml  testing_config.rviz  topic_mapping.yaml  twist_mux_topics.yaml
src/hermes_robot_description/launch/: bridge.launch.py  depth.launch.py  display.launch  empty_world.launch.py  gazebo.launch  gazebo.launch.py  mux.launch.py  nav2.launch.py  new.launch.py  robot.launch.py  robot_additional_nodes.launch.py  robot_description_w_gazebo.launch.py  rviz.launch.py  slam_online_async_launch.py  world.launch.py
src/hermes_robot_description/meshes/: CameraVision.STL  Camera_pivot.STL  Drive1.STL  Drive2.STL  Drive3.STL  Drive4.STL  IMU_Link.STL  Revolve1.STL  Revolve2.STL  Revolve3.STL  Revolve4.STL
src/hermes_robot_description/urdf/: corrected.sdf  corrected.urdf  corrected.urdf.xacro  corrected2.sdf  corrected2.urdf.xacro  hermes.sdf  hermes.urdf  hermes3.sdf  hermes_new.sdf  hermes_new.urdf  hermes_robot.csv  hermes_robot.urdf  robot.urdf
src/hermes_robot_description/worlds/: README.md  antigrav.sdf  dynamic.sdf  empty.sdf  hermes.sdf  world2.sdf
src/hermes_swerve_module/: BUILD.bazel  package.xml  setup.cfg  setup.py
src/hermes_swerve_module/hermes_swerve_module/: pid.ipynb  pid.py  swerve_module.py
src/hermes_swerve_module/hermes_swerve_module/images/: output.html
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_1/: events.out.tfevents.1743007134.DESKTOP-8JNCCFF.8516.0
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_10/: events.out.tfevents.1743008519.DESKTOP-8JNCCFF.8516.9
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_11/: events.out.tfevents.1743008783.DESKTOP-8JNCCFF.8516.10
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_12/: events.out.tfevents.1743009209.DESKTOP-8JNCCFF.8516.11
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_2/: events.out.tfevents.1743007280.DESKTOP-8JNCCFF.8516.1
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_3/: events.out.tfevents.1743007320.DESKTOP-8JNCCFF.8516.2
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_4/: events.out.tfevents.1743007388.DESKTOP-8JNCCFF.8516.3
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_5/: events.out.tfevents.1743007420.DESKTOP-8JNCCFF.8516.4
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_6/: events.out.tfevents.1743007471.DESKTOP-8JNCCFF.8516.5
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_7/: events.out.tfevents.1743007608.DESKTOP-8JNCCFF.8516.6
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_8/: events.out.tfevents.1743007679.DESKTOP-8JNCCFF.8516.7
src/hermes_swerve_module/hermes_swerve_module/pid_rl_tensorboard/PPO_9/: events.out.tfevents.1743008082.DESKTOP-8JNCCFF.8516.8
src/hermes_swerve_module/launch/: full_robot.launch.py  single_module.launch.py
src/hermes_validation_nodes/: package.xml  setup.cfg  setup.py
src/hermes_web_controller/frontend/: .bazelignore  BUILD.bazel  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/hermes_web_controller/frontend/src/: main.jsx
src/hermes_web_controller/frontend/src/app/: layout.jsx  page.jsx
src/hermes_web_controller/frontend/src/comps/: Controller.jsx  Viewer.jsx
src/realsense_gazebo_plugin/: CMakeLists.txt  package.xml
src/realsense_gazebo_plugin/include/realsense_gazebo_plugin/: RealSensePlugin.h
src/web_controller/web_controller/backend/: pyproject.toml  requirements.txt  server.py
src/web_controller/web_controller/backend/app/: server.py
thesis/: 00_Abstract.md  01_Introduction.md  02_Lit_Review.md  03_Methods_and_Results.md  03_Results.md  04_Discussion.md  05_Conclusion.md  06_Summary.md  07_Citations_and_Links.md  Compiled.doc  Compiled_New.docx  Notes.md  Structure.md  Thesis Defense.pptx  Version5.docx  ~$mpiled.doc  ~$mpiled_New.docx
web/: next.config.mjs  package-lock.json  package.json
(+91 files in other folders)
