# Poetry Rules

bazel_dep(name = "rules_python", version = "0.33.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

bazel_dep(name = "ofiuco", version = "0.3.7")

poetry = use_extension("@ofiuco//python:extensions.bzl", "poetry")
poetry.parse(
    name = "poetry",
    lock = "@//components/fastapi_example:poetry.lock",
)
use_repo(poetry, "poetry")


#  -------------------------- OCI Dep ----------------------------------------

bazel_dep(name = "rules_oci", version = "1.8.0")
# For testing, we also recommend https://registry.bazel.build/modules/container_structure_test

# oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")