workspace(name = "forsyth-pypi-bazel")

# Getting the pip rules

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# maybe
load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")


# Update the SHA and VERSION to the lastest version available here:
# https://github.com/bazelbuild/rules_python/releases.

maybe(
        http_archive,
        name = "rules_python",
        sha256 = "690e0141724abb568267e003c7b6d9a54925df40c275a870a4d934161dc9dd53",
        strip_prefix = "rules_python-0.40.0",
        url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.40.0.tar.gz",
    )

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()
# ---------------------- Install the Ros Deps ----------------------

load("//repositories:repositories.bzl", "load_ros2_rules", "load_ros2_messages")

load_ros2_rules()
load_ros2_messages()

load("@com_github_mvukov_rules_ros2//repositories:repositories.bzl", "ros2_repositories", "ros2_workspace_repositories")

ros2_workspace_repositories()

ros2_repositories()

load("@com_github_mvukov_rules_ros2//repositories:deps.bzl", "ros2_deps")

ros2_deps()

# ----------------- Register the Python Toolchain -----------------

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "rules_ros2_python",
    python_version = "3.10",
)

load("@rules_python//python:pip.bzl", "pip_parse")
load("@rules_ros2_python//:defs.bzl", python_interpreter_target = "interpreter")

pip_parse(
    name = "rules_ros2_pip_deps",
    python_interpreter_target = python_interpreter_target,
    requirements_lock = "@com_github_mvukov_rules_ros2//:requirements_lock.txt",
)

load(
    "@rules_ros2_pip_deps//:requirements.bzl",
    install_rules_ros2_pip_deps = "install_deps",
)

install_rules_ros2_pip_deps()

# ------------- Register the npm Toolchain for vite frontend -------------


http_archive(
    name = "aspect_rules_js",
    sha256 = "875b8d01af629dbf626eddc5cf239c9f0da20330f4d99ad956afc961096448dd",
    strip_prefix = "rules_js-2.1.3",
    url = "https://github.com/aspect-build/rules_js/releases/download/v2.1.3/rules_js-v2.1.3.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@aspect_rules_js//js:toolchains.bzl", "DEFAULT_NODE_VERSION", "rules_js_register_toolchains")

rules_js_register_toolchains(node_version = DEFAULT_NODE_VERSION)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")


FRONTEND_PATH = "src/hermes_web_controller/frontend"

npm_translate_lock(
    name = "npm",
    pnpm_lock = "//{}:pnpm-lock.yaml".format(FRONTEND_PATH),
    verify_node_modules_ignored = "//{}:.bazelignore".format(FRONTEND_PATH),
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

# ------------- Explicitly install the pip deps from a requirements file -------------





