[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["Forsyth Creations <robert.h.forsyth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
numpy = "^2.2.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
