load("@rules_python//python:defs.bzl", "py_binary")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@aspect_bazel_lib//lib:tar.bzl", "tar")


py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "@poetry//:colorama",
        "@poetry//:fastapi",
        "@poetry//:uvicorn"
    ],
    visibility = ["//visibility:public"],
)


oci_image(
    name = "main_image",
    base = "@ubuntu",
    tars = [":main_tar"],
)

tar (
    name = "main_tar",
    srcs = [":main"],
    visibility = ["//visibility:public"],
)