[tool.poetry]
name = "fastapi_example"
version = "0.1.0"
description = ""
authors = ["Henry Forsyth <robert.h.forsyth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
poetry-plugin-export = "^1.8.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
