load("@rules_python//python:defs.bzl", "py_binary")

# Talker
py_binary(
    name = "py_talker",
    srcs = ["py_talker.py"],
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
    visibility = ["//visibility:public"]
)

# Listener
py_binary(
    name = "py_listener",
    srcs = ["py_listener.py"],
    deps = [
        "@ros2_common_interfaces//:py_std_msgs",
        "@ros2_rclpy//:rclpy",
    ],
    visibility = ["//visibility:public"]
)