[tool.poetry]
name = "dynamics"
version = "0.1.0"
description = ""
authors = ["Henry Forsyth <robert.h.forsyth@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
