[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Henry Forsyth <robert.h.forsyth@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
poetry-plugin-export = "^1.8.0"
uvicorn = "^0.32.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
